--- a/RTSP/mp4_broadcast/dynamic_element/dynamic.ipynb
+++ b/RTSP/mp4_broadcast/dynamic_element/dynamic.ipynb
@@ -6,11 +6,120 @@
    "metadata": {},
    "outputs": [
     {
-     "ename": "SyntaxError",
-     "evalue": "invalid syntax (585187772.py, line 35)",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;36m  Cell \u001b[0;32mIn[1], line 35\u001b[0;36m\u001b[0m\n\u001b[0;31m    state_return = .set_state(Gst.State.NULL)\u001b[0m\n\u001b[0m                   ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid syntax\n"
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/tmp/ipykernel_37053/4085425434.py:3: PyGIWarning: Gst was imported without specifying a version first. Use gi.require_version('Gst', '1.0') before import to ensure that the right version gets loaded.\n",
+      "  from gi.repository import Gst, GObject\n"
+     ]
+    }
+   ],
+   "source": [
+    "import logging\n",
+    "import datetime\n",
+    "from gi.repository import Gst, GObject\n",
+    "\n",
+    "log = logging.getLogger(\"Pad-Probe\")\n",
+    "\n",
+    "def logging_pad_probe(pad, probeinfo, location):\n",
+    "    pts_nanpseconds = probeinfo.get_buffer().pts\n",
+    "    pts_timedelta = datetime.timedelta(microseconds=pts_nanpseconds / 1000)\n",
+    "    log.debug(\"PTS at %s = %s\", '{:>20s}'.format(location), pts_timedelta)\n",
+    "    return Gst.PadProbeReturn.OK\n",
+    "\n",
+    "log = logging.getLogger('Runner')\n",
+    "\n",
+    "class Runner(object):\n",
+    "    def __init__(self, pipeline, error_callback=None):\n",
+    "        self.mainloop = GObject.MainLoop()\n",
+    "        self.pipeline = pipeline\n",
+    "        self.error_callback = error_callback or self.quit\n",
+    "\n",
+    "    def run_blocking(self):\n",
+    "        self.configure()\n",
+    "        self.set_playing()\n",
+    "\n",
+    "        try:\n",
+    "            self.mainloop.run()\n",
+    "        except KeyboardInterrupt:\n",
+    "            print('Terminated via Ctrl-C')\n",
+    "\n",
+    "        self.set_null()\n",
+    "\n",
+    "    def configure(self):\n",
+    "        log.debug('configuring pipeline')\n",
+    "        bus = self.pipeline.bus\n",
+    "\n",
+    "        bus.add_signal_watch()\n",
+    "        bus.connect(\"message::eos\", self.on_eos)\n",
+    "        bus.connect(\"message::error\", self.on_error)\n",
+    "        bus.connect(\"message::state-changed\", self.on_state_change)\n",
+    "\n",
+    "    def on_eos(self, _bus, message):\n",
+    "        log.error(\"EOS from %s (at %s)\",\n",
+    "                  message.src.name, message.src.get_path_string())\n",
+    "        self.error_callback()\n",
+    "\n",
+    "    def on_error(self, _bus, message):\n",
+    "        (error, debug) = message.parse_error()\n",
+    "        log.error(\"Error from %s (at %s)\\n%s (%s)\",\n",
+    "                  message.src.name, message.src.get_path_string(), error, debug)\n",
+    "        self.error_callback()\n",
+    "\n",
+    "    def quit(self):\n",
+    "        log.warning('quitting mainloop')\n",
+    "        self.mainloop.quit()\n",
+    "\n",
+    "    def on_state_change(self, _bus, message):\n",
+    "        old_state, new_state, pending = message.parse_state_changed()\n",
+    "        if message.src == self.pipeline:\n",
+    "            log.info(\"Pipeline: State-Change from %s to %s; pending %s\",\n",
+    "                     old_state.value_name, new_state.value_name, pending.value_name)\n",
+    "        else:\n",
+    "            log.debug(\"%s: State-Change from %s to %s; pending %s\",\n",
+    "                      message.src.name, old_state.value_name, new_state.value_name, pending.value_name)\n",
+    "\n",
+    "    def set_playing(self):\n",
+    "        log.info('requesting state-change to PLAYING')\n",
+    "        self.pipeline.set_state(Gst.State.PLAYING)\n",
+    "\n",
+    "    def set_null(self):\n",
+    "        log.info('requesting state-change to NULL')\n",
+    "        self.pipeline.set_state(Gst.State.NULL)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "ASAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAaaa\n",
+      "In cb_newpad\n",
+      "\n",
+      "gstname= audio/mpeg\n",
+      "In cb_newpad\n",
+      "\n",
+      "gstname= video/x-h264\n",
+      "features= <Gst.CapsFeatures object at 0x7fa4e80898e0 (GstCapsFeatures at 0x7fa4f0036d60)>\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/tmp/ipykernel_37053/4085425434.py:17: PyGIDeprecationWarning: GObject.MainLoop is deprecated; use GLib.MainLoop instead\n",
+      "  self.mainloop = GObject.MainLoop()\n",
+      "Failed to link decoder src pad to source bin ghost pad\n",
+      "\n",
+      "** (python3:37053): CRITICAL **: 16:04:18.423: gst_capsfilter_prepare_buf: assertion 'out_caps != NULL' failed\n",
+      "ERROR:main:Error from source2 (at /GstPipeline:test-pipeline/GstFileSrc:source2)\n",
+      "gst-stream-error-quark: Internal data stream error. (1) (gstbasesrc.c(3072): gst_base_src_loop (): /GstPipeline:test-pipeline/GstFileSrc:source2:\n",
+      "streaming stopped, reason error (-5))\n",
+      "WARNING:main:quitting mainloop\n"
      ]
     }
    ],
@@ -18,17 +127,17 @@
     "import sys\n",
     "import gi\n",
     "import logging\n",
-    "\n",
+    "from threading import Thread, Event\n",
     "gi.require_version(\"GLib\", \"2.0\")\n",
     "gi.require_version(\"GObject\", \"2.0\")\n",
     "gi.require_version(\"Gst\", \"1.0\")\n",
     "\n",
     "from gi.repository import Gst, GLib, GObject\n",
     "\n",
-    "uri_name='rtsp://127.0.0.1:8554/test'\n",
     "file='/home/fkurt/Murat/ElephantsDream.mp4'\n",
+    "file2='/home/fkurt/Murat/video.mp4'\n",
     "\n",
-    "global decoder\n",
+    "log = logging.getLogger(\"main\")\n",
     "\n",
     "def cb_newpad(demux, src, sink):\n",
     "    print(\"In cb_newpad\\n\")\n",
@@ -44,50 +153,12 @@
     "        if not src.link(sink_pad):\n",
     "            sys.stderr.write(\"Failed to link decoder src pad to source bin ghost pad\\n\")\n",
     "\n",
-    "def stop_release_source(source_id):\n",
-    "    global decoder\n",
-    "    global demux\n",
-    "    global pipeline\n",
-    "\n",
-    "    #Attempt to change status of source to be released \n",
-    "    state_return = decoder.set_state(Gst.State.NULL)\n",
-    "\n",
-    "    if state_return == Gst.StateChangeReturn.SUCCESS:\n",
-    "        print(\"STATE CHANGE SUCCESS\\n\")\n",
-    "        pad_name = \"sink_%u\" % source_id\n",
-    "        print(pad_name)\n",
-    "        #Retrieve sink pad to be released\n",
-    "        sinkpad = demux.get_static_pad(pad_name)\n",
-    "        #Send flush stop event to the sink pad, then release from the streammux\n",
-    "        sinkpad.send_event(Gst.Event.new_flush_stop(False))\n",
-    "        demux.release_request_pad(sinkpad)\n",
-    "        print(\"STATE CHANGE SUCCESS\\n\")\n",
-    "        #Remove the source bin from the pipeline\n",
-    "        pipeline.remove(decoder)\n",
-    "        source_id -= 1\n",
-    "        g_num_sources -= 1\n",
-    "\n",
-    "    elif state_return == Gst.StateChangeReturn.FAILURE:\n",
-    "        print(\"STATE CHANGE FAILURE\\n\")\n",
-    "    \n",
-    "    elif state_return == Gst.StateChangeReturn.ASYNC:\n",
-    "        state_return = decoder.get_state(Gst.CLOCK_TIME_NONE)\n",
-    "        pad_name = \"sink_%u\" % source_id\n",
-    "        print(pad_name)\n",
-    "        sinkpad = demux.get_static_pad(pad_name)\n",
-    "        sinkpad.send_event(Gst.Event.new_flush_stop(False))\n",
-    "        demux.release_request_pad(sinkpad)\n",
-    "        print(\"STATE CHANGE ASYNC\\n\")\n",
-    "        pipeline.remove(decoder)\n",
-    "\n",
-    "        nvdecoder=Gst.ElementFactory.make('nvv4l2decoder','decoder')\n",
-    "        pipeline.add\n",
-    "\n",
     "\n",
     "logging.basicConfig(level=logging.DEBUG, format=\"[%(name)s] [%(levelname)8s] - %(message)s\")\n",
     "logger = logging.getLogger(__name__)\n",
     "\n",
     "Gst.init(None)\n",
+    "\n",
     "\n",
     "pipeline=Gst.Pipeline.new('test-pipeline')\n",
     "\n",
@@ -98,132 +169,100 @@
     "if not demux:\n",
     "    sys.stderr.write(\" Unable to create demux \\n\")\n",
     "decoder=Gst.ElementFactory.make('avdec_h264','decoder')\n",
-    "\n",
     "demux.connect(\"pad-added\", cb_newpad, decoder)\n",
     "\n",
-    "videoconvert=Gst.ElementFactory.make('videoconvert','convert')\n",
-    "x264enc=Gst.ElementFactory.make('x264enc','encoder')\n",
     "\n",
-    "sink=Gst.ElementFactory.make('rtspclientsink','sink')\n",
+    "caps=Gst.caps_from_string(\"video/x-raw, width=1280, height=720, framerate=(fraction)24/1\")\n",
+    "\n",
+    "\n",
+    "filter=Gst.ElementFactory.make('capsfilter','filter')\n",
+    "\n",
+    "videoconvert=Gst.ElementFactory.make('videoconvert','convert')\n",
+    "\n",
+    "\n",
+    "sink=Gst.ElementFactory.make('xvimagesink','sink')\n",
     "if not sink:\n",
     "    sys.stderr.write(\" Unable to create udpsink\")\n",
-    "sink.set_property(\"location\", uri_name)\n",
     "\n",
-    "if not sink or not decoder or not videoconvert or not x264enc or not pipeline:\n",
+    "if not sink or not decoder or not videoconvert or not pipeline:\n",
     "    logger.error('Elementlerde sıkıntı var...')\n",
     "    sys.exit(1)\n",
     "\n",
     "pipeline.add(source)\n",
     "pipeline.add(demux)\n",
     "pipeline.add(decoder)\n",
+    "pipeline.add(filter)\n",
     "pipeline.add(videoconvert)\n",
-    "pipeline.add(x264enc)\n",
+    "\n",
     "pipeline.add(sink)\n",
     "\n",
     "if source.link(demux):\n",
     "    logger.info('src-demux Bağlandı')\n",
-    "if decoder.link(videoconvert):\n",
+    "\n",
+    "\n",
+    "if decoder.link(filter):\n",
     "    logger.info('decoder-videoconvert Bağlandı')\n",
-    "if videoconvert.link(x264enc):\n",
+    "\n",
+    "if filter.link(videoconvert):\n",
+    "    logger.info('decoder-videoconvert Bağlandı')\n",
+    "    \n",
+    "if videoconvert.link(sink):\n",
     "    logger.info('videoconvert-x264enc Bağlandı')\n",
-    "if x264enc.link(sink):\n",
-    "    logger.info('x264enc-sink Bağlandı')\n",
-    "\n",
-    "ret=pipeline.set_state(Gst.State.PLAYING)\n",
-    "\n",
-    "if ret==Gst.StateChangeReturn.FAILURE:\n",
-    "    logger.error(\"pipeline'da sıkıntı var\")\n",
-    "    sys.exit(1)\n",
-    "\n",
-    "bus = pipeline.get_bus()\n",
-    "msg = bus.timed_pop_filtered(\n",
-    "    Gst.CLOCK_TIME_NONE, \n",
-    "    Gst.MessageType.ERROR | Gst.MessageType.EOS)\n",
-    "\n",
-    "if msg:\n",
-    "    if msg.type == Gst.MessageType.ERROR:\n",
-    "        err, debug_info = msg.parse_error()\n",
-    "        logger.error(f\"Error received from element {msg.src.get_name()}: {err.message}\")\n",
-    "        logger.error(f\"Debugging information: {debug_info if debug_info else 'none'}\")\n",
-    "\n",
-    "    elif msg.type == Gst.MessageType.EOS:\n",
-    "        logger.info(\"End-Of-Stream reached.\")\n",
-    "\n",
-    "    else:\n",
-    "        # This should not happen as we only asked for ERRORs and EOS\n",
-    "        logger.error(\"Unexpected message received.\")\n",
-    "\n",
-    "pipeline.set_state(Gst.State.NULL)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 4,
-   "metadata": {},
-   "outputs": [
-    {
-     "ename": "ModuleNotFoundError",
-     "evalue": "No module named 'tools'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mModuleNotFoundError\u001b[0m                       Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn[4], line 4\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[39mimport\u001b[39;00m \u001b[39mlogging\u001b[39;00m\n\u001b[1;32m      2\u001b[0m \u001b[39mfrom\u001b[39;00m \u001b[39mthreading\u001b[39;00m \u001b[39mimport\u001b[39;00m Thread, Event\n\u001b[0;32m----> 4\u001b[0m \u001b[39mfrom\u001b[39;00m \u001b[39mtools\u001b[39;00m\u001b[39m.\u001b[39;00m\u001b[39mapplication_init\u001b[39;00m \u001b[39mimport\u001b[39;00m application_init\n\u001b[1;32m      6\u001b[0m application_init()\n\u001b[1;32m      8\u001b[0m \u001b[39mfrom\u001b[39;00m \u001b[39mgi\u001b[39;00m\u001b[39m.\u001b[39;00m\u001b[39mrepository\u001b[39;00m \u001b[39mimport\u001b[39;00m Gst, GLib\n",
-      "\u001b[0;31mModuleNotFoundError\u001b[0m: No module named 'tools'"
-     ]
-    }
-   ],
-   "source": [
-    "import logging\n",
-    "from threading import Thread, Event\n",
-    "\n",
-    "from tools.application_init import application_init\n",
-    "\n",
-    "application_init()\n",
-    "\n",
-    "from gi.repository import Gst, GLib\n",
-    "from tools.logging_pad_probe import logging_pad_probe\n",
-    "from tools.runner import Runner\n",
-    "\n",
-    "log = logging.getLogger(\"main\")\n",
-    "\n",
-    "log.info(\"building pipeline\")\n",
-    "pipeline = Gst.Pipeline.new()\n",
-    "caps = Gst.Caps.from_string(\"audio/x-raw,format=S16LE,rate=48000,channels=2\")\n",
-    "\n",
-    "testsrc1 = Gst.ElementFactory.make(\"audiotestsrc\", \"testsrc1\")\n",
-    "testsrc1.set_property(\"is-live\", True)  # (3)\n",
-    "testsrc1.set_property(\"freq\", 220)\n",
-    "pipeline.add(testsrc1)\n",
-    "\n",
-    "mixer = Gst.ElementFactory.make(\"audiomixer\")\n",
-    "pipeline.add(mixer)\n",
-    "testsrc1.link_filtered(mixer, caps)\n",
-    "\n",
-    "sink = Gst.ElementFactory.make(\"autoaudiosink\")\n",
-    "pipeline.add(sink)\n",
-    "mixer.link_filtered(sink, caps)\n",
-    "\n",
-    "testsrc1.get_static_pad(\"src\").add_probe(\n",
-    "    Gst.PadProbeType.BUFFER, logging_pad_probe, \"testsrc1-output\")\n",
-    "\n",
-    "mixer.get_static_pad(\"src\").add_probe(\n",
-    "    Gst.PadProbeType.BUFFER, logging_pad_probe, \"mixer-output\")\n",
     "\n",
     "\n",
     "def add_new_src():\n",
+    "    global testsrc2, capsfilter2, mixerpad\n",
+    "    Gst.debug_bin_to_dot_file_with_ts(pipeline, Gst.DebugGraphDetails.ALL, \"adding-testsrc2-before\")\n",
     "    log.info(\"Adding testsrc2\")\n",
-    "    testsrc2 = Gst.ElementFactory.make(\"audiotestsrc\", \"testsrc2\")\n",
-    "    testsrc2.set_property(\"freq\", 440)\n",
-    "    testsrc2.set_property(\"is-live\", True)  # (2)\n",
+    "\n",
+    "    log.info(\"Creating testsrc2\")\n",
+    "    testsrc2=Gst.ElementFactory.make('filesrc','source2')\n",
+    "    testsrc2.set_property('location', file2)\n",
     "\n",
     "    testsrc2.get_static_pad(\"src\").add_probe(\n",
     "        Gst.PadProbeType.BUFFER, logging_pad_probe, \"testsrc2-output\")\n",
     "\n",
-    "    pipeline.add(testsrc2)\n",
-    "    testsrc2.link_filtered(mixer, caps)\n",
-    "    testsrc2.sync_state_with_parent()  # (4)\n",
+    "    log.info(\"Adding testsrc2\")\n",
+    "    log.debug(pipeline.add(testsrc2))\n",
+    "\n",
+    "    log.info(\"Creating capsfilter\")\n",
+    "    capsfilter2 = Gst.ElementFactory.make(\"capsfilter\", \"capsfilter2\")  # (3)\n",
+    "    capsfilter2.set_property(\"caps\", caps)\n",
+    "\n",
+    "    log.info(\"Adding capsfilter\")\n",
+    "    log.debug(pipeline.add(capsfilter2))\n",
+    "\n",
+    "    log.info(\"Linking testsrc2 to capsfilter2\")\n",
+    "    log.debug(testsrc2.link(capsfilter2))\n",
+    "\n",
+    "    log.info(\"Syncing Element-States with Pipeline\")\n",
+    "    log.debug(capsfilter2.sync_state_with_parent())\n",
+    "    log.debug(testsrc2.sync_state_with_parent())\n",
+    "\n",
     "    log.info(\"Adding testsrc2 done\")\n",
+    "    Gst.debug_bin_to_dot_file_with_ts(pipeline, Gst.DebugGraphDetails.ALL, \"adding-testsrc2-after\")  # (4)\n",
+    "\n",
+    "\n",
+    "def remove_src():\n",
+    "    Gst.debug_bin_to_dot_file_with_ts(pipeline, Gst.DebugGraphDetails.ALL, \"removing-testsrc2-before\")\n",
+    "    log.info(\"Removing testsrc2\")\n",
+    "\n",
+    "    log.info(\"Stopping testsrc2\")\n",
+    "    log.debug(testsrc2.set_state(Gst.State.NULL))  # (5)\n",
+    "\n",
+    "    log.info(\"Stopping capsfilter2\")\n",
+    "    log.debug(capsfilter2.set_state(Gst.State.NULL))\n",
+    "\n",
+    "    log.info(\"Removing testsrc2\")\n",
+    "    log.debug(pipeline.remove(testsrc2))\n",
+    "\n",
+    "    log.info(\"Removing capsfilter2\")\n",
+    "    log.debug(pipeline.remove(capsfilter2))\n",
+    "\n",
+    "    log.info(\"Removing testsrc2 done\")\n",
+    "    Gst.debug_bin_to_dot_file_with_ts(pipeline, Gst.DebugGraphDetails.ALL, \"removing-testsrc2-after\")\n",
+    "\n",
+    "\n",
     "\n",
     "\n",
     "stop_event = Event()\n",
@@ -231,9 +270,15 @@
     "\n",
     "def timed_sequence():\n",
     "    log.info(\"Starting Sequence\")\n",
-    "    if stop_event.wait(2): return\n",
-    "    GLib.idle_add(add_new_src)  # (1)\n",
-    "    log.info(\"Sequence ended\")\n",
+    "    print(\"ASAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAaaa\")\n",
+    "    while True:\n",
+    "        if stop_event.wait(2): return\n",
+    "        log.info(\"Schedule Add Source\")\n",
+    "        GLib.idle_add(add_new_src)\n",
+    "\n",
+    "        if stop_event.wait(2): return\n",
+    "        log.info(\"Schedule Remove Source\")\n",
+    "        GLib.idle_add(remove_src)\n",
     "\n",
     "\n",
     "t = Thread(target=timed_sequence, name=\"Sequence\")\n",
