--- a/RTSP/mp4_broadcast/reciever_code.ipynb
+++ b/RTSP/mp4_broadcast/reciever_code.ipynb
@@ -12,7 +12,7 @@
       "In cb_newpad\n",
       "\n",
       "gstname= application/x-rtp\n",
-      "features= <Gst.CapsFeatures object at 0x7ff5f004a3a0 (GstCapsFeatures at 0x7ff58c003f40)>\n"
+      "features= <Gst.CapsFeatures object at 0x7fa801c29520 (GstCapsFeatures at 0x7fa7b0003f40)>\n"
      ]
     },
     {
