--- a/RTSP/mp4_broadcast/rtsp_sender_code.ipynb
+++ b/RTSP/mp4_broadcast/rtsp_sender_code.ipynb
@@ -6,17 +6,6 @@
    "metadata": {},
    "outputs": [
     {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "[__main__] [    INFO] - src-demux Bağlandı\n",
-      "[__main__] [    INFO] - decoder-videoconvert Bağlandı\n",
-      "[__main__] [    INFO] - videoconvert-x264enc Bağlandı\n",
-      "[__main__] [    INFO] - x264enc-sink Bağlandı\n",
-      "Failed to link decoder src pad to source bin ghost pad\n"
-     ]
-    },
-    {
      "name": "stdout",
      "output_type": "stream",
      "text": [
@@ -26,8 +15,28 @@
       "In cb_newpad\n",
       "\n",
       "gstname= video/x-h264\n",
-      "features= <Gst.CapsFeatures object at 0x7fcbc9bfd1c0 (GstCapsFeatures at 0x7fcba0036180)>\n"
+      "features= <Gst.CapsFeatures object at 0x7feae0c735e0 (GstCapsFeatures at 0x7feab0037180)>\n"
      ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Failed to link decoder src pad to source bin ghost pad\n",
+      "ERROR:__main__:Error received from element sink: Could not open resource for reading and writing.\n",
+      "ERROR:__main__:Debugging information: gstrtspclientsink.c(2330): gst_rtsp_client_sink_loop_rx (): /GstPipeline:test-pipeline/GstRTSPClientSink:sink:\n",
+      "Could not connect to server. (Generic error)\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "<enum GST_STATE_CHANGE_SUCCESS of type Gst.StateChangeReturn>"
+      ]
+     },
+     "execution_count": 1,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -156,7 +165,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.10 (default, Nov 14 2022, 12:59:47) \n[GCC 9.4.0]"
+   "version": "3.8.10"
   },
   "orig_nbformat": 4,
   "vscode": {
