--- a/RTSP/camera_broadcast/cam_sender.ipynb
+++ b/RTSP/camera_broadcast/cam_sender.ipynb
@@ -39,7 +39,7 @@
     "\n",
     "from gi.repository import Gst, GLib, GObject\n",
     "\n",
-    "src_uri=''\n",
+    "src_uri='http://158.58.130.148/mjpg/video.mjpg'\n",
     "sink_uri='rtsp://127.0.0.1:8554/test'\n",
     "\n",
     "def cb_newpad(demux, src, sink):\n",
