--- a/RTSP/mp4_broadcast/dynamic_element/dynamic.ipynb
+++ b/RTSP/mp4_broadcast/dynamic_element/dynamic.ipynb
@@ -9,7 +9,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/tmp/ipykernel_37053/4085425434.py:3: PyGIWarning: Gst was imported without specifying a version first. Use gi.require_version('Gst', '1.0') before import to ensure that the right version gets loaded.\n",
+      "/tmp/ipykernel_16444/4085425434.py:3: PyGIWarning: Gst was imported without specifying a version first. Use gi.require_version('Gst', '1.0') before import to ensure that the right version gets loaded.\n",
       "  from gi.repository import Gst, GObject\n"
      ]
     }
@@ -90,9 +90,46 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "[__main__] [    INFO] - src-demux Bağlandı\n",
+      "[__main__] [    INFO] - decoder-videoconvert Bağlandı\n",
+      "[__main__] [    INFO] - decoder-videoconvert Bağlandı\n",
+      "[__main__] [    INFO] - videoconvert-x264enc Bağlandı\n",
+      "[main] [    INFO] - Starting Sequence\n",
+      "/tmp/ipykernel_16444/4085425434.py:17: PyGIDeprecationWarning: GObject.MainLoop is deprecated; use GLib.MainLoop instead\n",
+      "  self.mainloop = GObject.MainLoop()\n",
+      "[main] [   DEBUG] - configuring pipeline\n",
+      "[main] [    INFO] - requesting state-change to PLAYING\n",
+      "[main] [   DEBUG] - sink: State-Change from GST_STATE_NULL to GST_STATE_READY; pending GST_STATE_VOID_PENDING\n",
+      "Failed to link decoder src pad to source bin ghost pad\n",
+      "[main] [   DEBUG] - convert: State-Change from GST_STATE_NULL to GST_STATE_READY; pending GST_STATE_VOID_PENDING\n",
+      "[main] [   DEBUG] - filter: State-Change from GST_STATE_NULL to GST_STATE_READY; pending GST_STATE_VOID_PENDING\n",
+      "[main] [   DEBUG] - decoder: State-Change from GST_STATE_NULL to GST_STATE_READY; pending GST_STATE_VOID_PENDING\n",
+      "[main] [   DEBUG] - demux: State-Change from GST_STATE_NULL to GST_STATE_READY; pending GST_STATE_VOID_PENDING\n",
+      "[main] [   DEBUG] - source: State-Change from GST_STATE_NULL to GST_STATE_READY; pending GST_STATE_VOID_PENDING\n",
+      "[main] [    INFO] - Pipeline: State-Change from GST_STATE_NULL to GST_STATE_READY; pending GST_STATE_PLAYING\n",
+      "[main] [   DEBUG] - convert: State-Change from GST_STATE_READY to GST_STATE_PAUSED; pending GST_STATE_VOID_PENDING\n",
+      "[main] [   DEBUG] - filter: State-Change from GST_STATE_READY to GST_STATE_PAUSED; pending GST_STATE_VOID_PENDING\n",
+      "[main] [   DEBUG] - decoder: State-Change from GST_STATE_READY to GST_STATE_PAUSED; pending GST_STATE_VOID_PENDING\n",
+      "[main] [   DEBUG] - demux: State-Change from GST_STATE_READY to GST_STATE_PAUSED; pending GST_STATE_VOID_PENDING\n",
+      "[main] [   DEBUG] - source: State-Change from GST_STATE_READY to GST_STATE_PAUSED; pending GST_STATE_VOID_PENDING\n",
+      "[main] [   DEBUG] - sink: State-Change from GST_STATE_READY to GST_STATE_PAUSED; pending GST_STATE_VOID_PENDING\n",
+      "[main] [    INFO] - Pipeline: State-Change from GST_STATE_READY to GST_STATE_PAUSED; pending GST_STATE_PLAYING\n",
+      "[main] [   DEBUG] - sink: State-Change from GST_STATE_PAUSED to GST_STATE_PLAYING; pending GST_STATE_VOID_PENDING\n",
+      "[main] [   DEBUG] - convert: State-Change from GST_STATE_PAUSED to GST_STATE_PLAYING; pending GST_STATE_VOID_PENDING\n",
+      "[main] [   DEBUG] - filter: State-Change from GST_STATE_PAUSED to GST_STATE_PLAYING; pending GST_STATE_VOID_PENDING\n",
+      "[main] [   DEBUG] - decoder: State-Change from GST_STATE_PAUSED to GST_STATE_PLAYING; pending GST_STATE_VOID_PENDING\n",
+      "[main] [   DEBUG] - demux: State-Change from GST_STATE_PAUSED to GST_STATE_PLAYING; pending GST_STATE_VOID_PENDING\n",
+      "[main] [   DEBUG] - source: State-Change from GST_STATE_PAUSED to GST_STATE_PLAYING; pending GST_STATE_VOID_PENDING\n",
+      "[main] [    INFO] - Pipeline: State-Change from GST_STATE_PAUSED to GST_STATE_PLAYING; pending GST_STATE_VOID_PENDING\n"
+     ]
+    },
     {
      "name": "stdout",
      "output_type": "stream",
@@ -100,26 +137,45 @@
       "ASAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAaaa\n",
       "In cb_newpad\n",
       "\n",
-      "gstname= audio/mpeg\n",
+      "gstname= video/x-h264\n",
+      "features= <Gst.CapsFeatures object at 0x7fa4040e0460 (GstCapsFeatures at 0x7fa3bc014ce0)>\n",
       "In cb_newpad\n",
       "\n",
-      "gstname= video/x-h264\n",
-      "features= <Gst.CapsFeatures object at 0x7fa4e80898e0 (GstCapsFeatures at 0x7fa4f0036d60)>\n"
+      "gstname= audio/mpeg\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/tmp/ipykernel_37053/4085425434.py:17: PyGIDeprecationWarning: GObject.MainLoop is deprecated; use GLib.MainLoop instead\n",
-      "  self.mainloop = GObject.MainLoop()\n",
-      "Failed to link decoder src pad to source bin ghost pad\n",
+      "[main] [    INFO] - Schedule Add Source\n",
+      "[main] [    INFO] - Adding testsrc2\n",
+      "[main] [    INFO] - Creating testsrc2\n",
+      "[main] [    INFO] - Adding testsrc2\n",
+      "[main] [   DEBUG] - None\n",
+      "[main] [    INFO] - Creating capsfilter\n",
+      "[main] [    INFO] - Adding capsfilter\n",
+      "[main] [   DEBUG] - None\n",
+      "[main] [    INFO] - Linking testsrc2 to capsfilter2\n",
+      "[main] [   DEBUG] - True\n",
+      "[main] [    INFO] - Syncing Element-States with Pipeline\n",
+      "[main] [   DEBUG] - True\n",
+      "[main] [   DEBUG] - True\n",
+      "[main] [   DEBUG] - PTS at      testsrc2-output = 0:00:00\n",
+      "[main] [    INFO] - Adding testsrc2 done\n",
       "\n",
-      "** (python3:37053): CRITICAL **: 16:04:18.423: gst_capsfilter_prepare_buf: assertion 'out_caps != NULL' failed\n",
-      "ERROR:main:Error from source2 (at /GstPipeline:test-pipeline/GstFileSrc:source2)\n",
+      "** (python3:16444): CRITICAL **: 16:20:16.115: gst_capsfilter_prepare_buf: assertion 'out_caps != NULL' failed\n",
+      "[main] [   DEBUG] - capsfilter2: State-Change from GST_STATE_NULL to GST_STATE_READY; pending GST_STATE_PLAYING\n",
+      "[main] [   DEBUG] - capsfilter2: State-Change from GST_STATE_READY to GST_STATE_PAUSED; pending GST_STATE_PLAYING\n",
+      "[main] [   DEBUG] - capsfilter2: State-Change from GST_STATE_PAUSED to GST_STATE_PLAYING; pending GST_STATE_VOID_PENDING\n",
+      "[main] [   DEBUG] - source2: State-Change from GST_STATE_NULL to GST_STATE_READY; pending GST_STATE_PLAYING\n",
+      "[main] [   DEBUG] - source2: State-Change from GST_STATE_READY to GST_STATE_PAUSED; pending GST_STATE_PLAYING\n",
+      "[main] [   DEBUG] - source2: State-Change from GST_STATE_PAUSED to GST_STATE_PLAYING; pending GST_STATE_VOID_PENDING\n",
+      "[main] [   ERROR] - Error from source2 (at /GstPipeline:test-pipeline/GstFileSrc:source2)\n",
       "gst-stream-error-quark: Internal data stream error. (1) (gstbasesrc.c(3072): gst_base_src_loop (): /GstPipeline:test-pipeline/GstFileSrc:source2:\n",
       "streaming stopped, reason error (-5))\n",
-      "WARNING:main:quitting mainloop\n"
+      "[main] [ WARNING] - quitting mainloop\n",
+      "[main] [    INFO] - requesting state-change to NULL\n"
      ]
     }
    ],
@@ -134,8 +190,8 @@
     "\n",
     "from gi.repository import Gst, GLib, GObject\n",
     "\n",
-    "file='/home/fkurt/Murat/ElephantsDream.mp4'\n",
-    "file2='/home/fkurt/Murat/video.mp4'\n",
+    "file='/opt/nvidia/deepstream/deepstream-6.1/samples/streams/sample_1080p_h264.mp4'\n",
+    "file2='/opt/nvidia/deepstream/deepstream-6.1/samples/streams/sample_720p.mp4'\n",
     "\n",
     "log = logging.getLogger(\"main\")\n",
     "\n",
@@ -210,60 +266,60 @@
     "    logger.info('videoconvert-x264enc Bağlandı')\n",
     "\n",
     "\n",
-    "def add_new_src():\n",
-    "    global testsrc2, capsfilter2, mixerpad\n",
+    "def avdec_nv():\n",
+    "    global testsrc2, decoder,nvdec\n",
     "    Gst.debug_bin_to_dot_file_with_ts(pipeline, Gst.DebugGraphDetails.ALL, \"adding-testsrc2-before\")\n",
     "    log.info(\"Adding testsrc2\")\n",
+    "    log.info(\"Stopping capsfilter2\")\n",
+    "    log.debug(decoder.set_state(Gst.State.NULL))\n",
+    "\n",
+    "    log.info(\"Removing capsfilter2\")\n",
+    "    log.debug(pipeline.remove(decoder))\n",
+    "\n",
     "\n",
     "    log.info(\"Creating testsrc2\")\n",
-    "    testsrc2=Gst.ElementFactory.make('filesrc','source2')\n",
-    "    testsrc2.set_property('location', file2)\n",
+    "    nvdec=Gst.ElementFactory.make('nvv4l2decoder','decoder2')\n",
     "\n",
-    "    testsrc2.get_static_pad(\"src\").add_probe(\n",
+    "    nvdec.get_static_pad(\"src\").add_probe(\n",
     "        Gst.PadProbeType.BUFFER, logging_pad_probe, \"testsrc2-output\")\n",
     "\n",
     "    log.info(\"Adding testsrc2\")\n",
-    "    log.debug(pipeline.add(testsrc2))\n",
-    "\n",
-    "    log.info(\"Creating capsfilter\")\n",
-    "    capsfilter2 = Gst.ElementFactory.make(\"capsfilter\", \"capsfilter2\")  # (3)\n",
-    "    capsfilter2.set_property(\"caps\", caps)\n",
-    "\n",
-    "    log.info(\"Adding capsfilter\")\n",
-    "    log.debug(pipeline.add(capsfilter2))\n",
-    "\n",
-    "    log.info(\"Linking testsrc2 to capsfilter2\")\n",
-    "    log.debug(testsrc2.link(capsfilter2))\n",
+    "    log.debug(pipeline.add(nvdec))\n",
     "\n",
     "    log.info(\"Syncing Element-States with Pipeline\")\n",
-    "    log.debug(capsfilter2.sync_state_with_parent())\n",
-    "    log.debug(testsrc2.sync_state_with_parent())\n",
+    "    log.debug(nvdec.sync_state_with_parent())\n",
     "\n",
     "    log.info(\"Adding testsrc2 done\")\n",
     "    Gst.debug_bin_to_dot_file_with_ts(pipeline, Gst.DebugGraphDetails.ALL, \"adding-testsrc2-after\")  # (4)\n",
     "\n",
+    "def nv_avdec():\n",
+    "    global testsrc2, decoder,nvdec\n",
+    "    Gst.debug_bin_to_dot_file_with_ts(pipeline, Gst.DebugGraphDetails.ALL, \"adding-testsrc2-before\")\n",
+    "    log.info(\"Adding testsrc2\")\n",
     "\n",
-    "def remove_src():\n",
-    "    Gst.debug_bin_to_dot_file_with_ts(pipeline, Gst.DebugGraphDetails.ALL, \"removing-testsrc2-before\")\n",
-    "    log.info(\"Removing testsrc2\")\n",
-    "\n",
-    "    log.info(\"Stopping testsrc2\")\n",
-    "    log.debug(testsrc2.set_state(Gst.State.NULL))  # (5)\n",
     "\n",
     "    log.info(\"Stopping capsfilter2\")\n",
-    "    log.debug(capsfilter2.set_state(Gst.State.NULL))\n",
-    "\n",
-    "    log.info(\"Removing testsrc2\")\n",
-    "    log.debug(pipeline.remove(testsrc2))\n",
+    "    log.debug(nvdec.set_state(Gst.State.NULL))\n",
     "\n",
     "    log.info(\"Removing capsfilter2\")\n",
-    "    log.debug(pipeline.remove(capsfilter2))\n",
-    "\n",
-    "    log.info(\"Removing testsrc2 done\")\n",
-    "    Gst.debug_bin_to_dot_file_with_ts(pipeline, Gst.DebugGraphDetails.ALL, \"removing-testsrc2-after\")\n",
+    "    log.debug(pipeline.remove(nvdec))\n",
     "\n",
     "\n",
     "\n",
+    "    log.info(\"Creating testsrc2\")\n",
+    "    nvdec=Gst.ElementFactory.make('nvv4l2decoder','decoder2')\n",
+    "\n",
+    "    nvdec.get_static_pad(\"src\").add_probe(\n",
+    "        Gst.PadProbeType.BUFFER, logging_pad_probe, \"testsrc2-output\")\n",
+    "\n",
+    "    log.info(\"Adding testsrc2\")\n",
+    "    log.debug(pipeline.add(decoder))\n",
+    "\n",
+    "    log.info(\"Syncing Element-States with Pipeline\")\n",
+    "    log.debug(decoder.sync_state_with_parent())\n",
+    "\n",
+    "    log.info(\"Adding testsrc2 done\")\n",
+    "    Gst.debug_bin_to_dot_file_with_ts(pipeline, Gst.DebugGraphDetails.ALL, \"adding-testsrc2-after\")  # (4)\n",
     "\n",
     "stop_event = Event()\n",
     "\n",
